Fix opening logs for contact passed via command line

And add support for opening logs via Nepomuk URI

REVIEW: 112739
BUG: 324918